--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,7 +35,8 @@ jobs:
         with:
           name: Artifacts
           path: build/libs/
-
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
        env:
         GITHUB_TOKEN: ${{ secrets.MY_PERSONAL_TOKEN }} # Manuel token kullanımı
       with:
