--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,9 +1,8 @@
 name: Build, Test, and Release
 
-on:
-  push:
+on: [pull_request,   push:
     tags:
-      - 'v*'
+      - 'v*']
 
 jobs:
   build:
