--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,8 +1,9 @@
 name: Build, Test, and Release
 
-on: [pull_request,   push:
-    tags:
-      - 'v*']
+on: 
+    push:
+        tags:
+            - 'v*'
 
 jobs:
   build:
