--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,14 @@ name: build
 on:
   push:
     branches:
-      - main
-    tags:
-      - 'v*'  # Sadece "v1.0.0" gibi tag'lerde release tetiklenir
+      - main  # Sadece main branch'e push yapıldığında çalışır
   pull_request:
 
 jobs:
   build:
     strategy:
       matrix:
-        java: [21] # Java 21 kullanılıyor
+        java: [21]
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout repository
@@ -33,19 +31,42 @@ jobs:
         run: ./gradlew build
 
       - name: Capture build artifacts
-        if: ${{ matrix.java == '21' }}
         uses: actions/upload-artifact@v4
         with:
           name: Artifacts
           path: build/libs/
 
-  release:
+  tag-and-release:
     needs: build
-    if: startsWith(github.ref, 'refs/tags/v') # Sadece v* ile başlayan tag'lerde çalışır
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Fetch all tags
+        run: git fetch --tags
+
+      - name: Determine latest version and build number
+        id: version
+        run: |
+          LATEST_TAG=$(git tag --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+:build\.[0-9]+$' | head -n 1 || echo "")
+          
+          if [[ -z "$LATEST_TAG" ]]; then
+            NEW_TAG="v1.0.0:build.1"
+          else
+            BASE_VERSION=$(echo "$LATEST_TAG" | cut -d':' -f1)
+            BUILD_NUMBER=$(echo "$LATEST_TAG" | cut -d'.' -f2)
+            NEW_BUILD_NUMBER=$((BUILD_NUMBER + 1))
+            NEW_TAG="${BASE_VERSION}:build.${NEW_BUILD_NUMBER}"
+          fi
+          
+          echo "new_tag=$NEW_TAG" >> $GITHUB_ENV
+          echo "New Tag: $NEW_TAG"
+
+      - name: Create and push new tag
+        run: |
+          git tag ${{ env.new_tag }}
+          git push origin ${{ env.new_tag }}
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
@@ -56,6 +77,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ env.new_tag }}
           files: build/libs/*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
